external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_scope.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/matching/invalid_scope.move:15:13
   │
15 │             m::Maybe::Just(_) => 5,
   │             ^^^^^^^^^^^^^^^^^ Invalid deconstructing pattern for '0x42::m::Maybe::Just'.
 All enums can only be matched in the module in which they are declared

error[E04001]: restricted visibility
   ┌─ tests/move_2024/matching/invalid_scope.move:16:13
   │
16 │             m::Maybe::Nothing => 10,
   │             ^^^^^^^^^^^^^^^^^ Invalid deconstructing pattern for '0x42::m::Maybe::Nothing'.
 All enums can only be matched in the module in which they are declared

